--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -3,3 +3,8 @@ $bp-sm:576px;
 $bp-md:768px;
 $bp-lg:992px;
 $bp-xl:1200px;
+
+//Font
+$primary-font:'Open Sans', sans-serif;
+$primary-font-bold:600;
+
