--- a/assets/scss/layout/_section.scss
+++ b/assets/scss/layout/_section.scss
@@ -1,20 +1,45 @@
 .perfil{
-
+justify-content: space-between;
+border-bottom: 1px solid lightgray;
+@include respond-to($bp-sm){
+    border-bottom: none;
+}
     &__container{
-        padding-top: 20px;
-        padding-left: 35px;
+        padding-top: 10px;
+        margin-left:100px;
+        align-items: top;
+        justify-content: space-between;
+        @include respond-to($bp-sm){
+        margin-left: 10%;
+        margin-top: 3%;
+        }
         &__img{
-        width: 10%;
+        width:35%;
         border-radius: 100px;
-        height: 132px;
+        height: 65px;
             @include respond-to($bp-sm){
-                width: 90%;
+                width: 38%;
                 height:75px;
             }
         }
     }
-    &__seguidores{
-        padding-left: 20px;
+    h4{
+        font-size: 18px;
+        padding-left: 5px;
         padding-top: 20px;
+        margin: 0;
+        p{
+            font-size: 15px;
+            color: gray;
+            padding-top: 3px;
+            
+        }
+     }
+     &__botones{
+    align-self: center;
+    margin-right: 100px;
+        .btn{
+            border-radius: 0;
+        }
     }
 }
