--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,6 +4,9 @@
 //vendors
 @import "vendors/bootstrap-4.5.2/bootstrap";
 //base
+@import "base/base";
 //layout
 @import "layout/header";
 @import "layout/section";
+@import "layout/article";
+@import "layout/nav";
