añadí iconos a barra de navegación y cambie icono del bar collapsed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9993,8 +9993,19 @@ header {
   row-gap: 20px;
 }
 
+.navbar {
+  margin-left: 5%;
+  margin-right: 5%;
+}
 .navbar__logo {
   font-size: 30px;
+}
+.navbar-toggler {
+  color: grey;
+}
+
+.nav-link {
+  color: black;
 }
 
 /*# sourceMappingURL=style.css.map */
