--- a/assets/scss/layout/_section.scss
+++ b/assets/scss/layout/_section.scss
@@ -14,12 +14,12 @@ border-bottom: 1px solid lightgray;
         margin-top: 3%;
         }
         &__img{
-        width:35%;
+        width:4.6875rem;
         border-radius: 100px;
-        height: 65px;
+        height: 4.375rem;
             @include respond-to($bp-sm){
-                width: 38%;
-                height:75px;
+                width: 4.375rem;
+                height:4.375rem;
             }
         }
     }
