--- a/assets/scss/layout/_section.scss
+++ b/assets/scss/layout/_section.scss
@@ -5,8 +5,8 @@ border-bottom: 1px solid lightgray;
     border-bottom: none;
 }
     &__container{
-        padding-top: 10px;
-        margin-left:100px;
+        padding-top: 0.625rem;
+        margin-left:8.125rem;
         align-items: top;
         justify-content: space-between;
         @include respond-to($bp-sm){
@@ -25,7 +25,7 @@ border-bottom: 1px solid lightgray;
     }
     h4{
         font-size: 18px;
-        padding-left: 5px;
+        padding-left: 15px;
         padding-top: 20px;
         margin: 0;
         p{
@@ -35,11 +35,4 @@ border-bottom: 1px solid lightgray;
             
         }
      }
-     &__botones{
-    align-self: center;
-    margin-right: 100px;
-        .btn{
-            border-radius: 0;
-        }
-    }
 }
