--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Poppins:wght@400;500&display=swap");
 /*!
  * Bootstrap v4.5.2 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -9896,6 +9897,7 @@ h3 {
 body {
   margin: 0;
   padding: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
 header {
@@ -9941,12 +9943,15 @@ header {
 }
 @media (max-width: 576px) {
   .perfil__container__img {
-    width: 4.375rem;
+    width: 4.475rem;
     height: 4.375rem;
+    margin-left: 0.625rem;
   }
 }
 .perfil h4 {
-  font-size: 18px;
+  font-size: 21px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
   padding-left: 15px;
   padding-top: 20px;
   margin: 0;
@@ -9955,6 +9960,8 @@ header {
   font-size: 15px;
   color: gray;
   padding-top: 3px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
 }
 
 .photos {
@@ -9978,6 +9985,12 @@ header {
 }
 .card .card-img {
   border-radius: 0;
+  align-content: center;
+  height: 20vh;
+}
+.card .card-text {
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .row {
@@ -9985,16 +9998,36 @@ header {
   padding-right: 10%;
   row-gap: 20px;
 }
+@media (max-width: 576px) {
+  .row {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
 
 .navbar {
   margin-left: 5%;
   margin-right: 5%;
 }
+@media (max-width: 576px) {
+  .navbar {
+    margin-top: 4%;
+    margin-bottom: 4%;
+  }
+}
 .navbar__logo {
-  font-size: 30px;
+  font-size: 35px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+.navbar__logo span {
+  font-size: 10px;
+  position: absolute;
+  top: 10%;
 }
 .navbar-toggler {
-  color: grey;
+  color: #55595c;
+  font-size: 25px;
 }
 
 .nav-link {
