--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -1,12 +1,24 @@
 .navbar{
     margin-left:5%;
     margin-right: 5%;
+    @include respond-to($bp-sm){
+        margin-top: 4%;
+        margin-bottom: 4%;
+    }
     &__logo{
-        font-size: 30px;
+        font-size: 35px;
+        font-family: $primary-font;
+        font-weight: $primary-font-bold;
+        span{
+            font-size: 10px;
+            position: absolute;
+            top:10%;
+        }
     }
 
     &-toggler{
-        color: grey;
+        color:$grey-logo;
+        font-size:25px;
         
     }
 }
