redondie profile img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9936,13 +9936,13 @@ header {
 }
 .perfil__container__img {
   width: 4.6875rem;
-  border-radius: 100px;
-  height: 4.375rem;
+  border-radius: 50%;
+  height: 4.6875rem;
 }
 @media (max-width: 576px) {
   .perfil__container__img {
     width: 4.475rem;
-    height: 4.375rem;
+    height: 4.475rem;
     margin-left: 0.625rem;
   }
 }
