--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -1,3 +1,7 @@
+//colors
+$grey-logo:rgba(85,89,92);
+$sky-blue:rgba(146,220,229);
+$rojo-claro:rgba(239,100,97);
 //breakpoints
 $bp-sm:576px;
 $bp-md:768px;
@@ -22,5 +26,4 @@ $secondary-font:$monserrat;
 $secondary-font-bold:$monserrat-bold;
 $secondary-font-medium:$monserrat-medium;
 
-//color
-$grey-logo:rgba(85,89,92);
+
