--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9934,19 +9934,19 @@ header {
     margin-top: 3%;
   }
 }
-.perfil__container__img {
+.perfil__img {
   width: 4.6875rem;
   border-radius: 50%;
   height: 4.6875rem;
 }
 @media (max-width: 576px) {
-  .perfil__container__img {
+  .perfil__img {
     width: 4.475rem;
     height: 4.475rem;
     margin-left: 0.625rem;
   }
 }
-.perfil h4 {
+.perfil__h4 {
   font-size: 21px;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
@@ -9954,7 +9954,7 @@ header {
   padding-top: 20px;
   margin: 0;
 }
-.perfil h4 p {
+.perfil__p {
   font-size: 15px;
   color: gray;
   padding-top: 3px;
@@ -10003,48 +10003,49 @@ header {
   }
 }
 
-.navbar {
+.navigator {
   margin-left: 5%;
   margin-right: 5%;
 }
 @media (max-width: 576px) {
-  .navbar {
+  .navigator {
     margin-top: 4%;
     margin-bottom: 4%;
   }
 }
-.navbar__logo {
+.navigator__span-1 {
   font-size: 35px;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
 }
-.navbar__logo span {
+.navigator__span-2 {
   font-size: 10px;
   position: absolute;
-  top: 10%;
+  top: 6.85px;
 }
-.navbar-toggler {
+.navigator__burger {
   color: #55595c;
   font-size: 25px;
 }
-
-.nav-link {
+.navigator__link-1, .navigator__link-2, .navigator__link-3, .navigator__link-4, .navigator__link-5 {
   color: black;
 }
 
 .perfil__botones {
   align-self: center;
   margin-right: 100px;
+  display: flex;
 }
-.perfil__botones .btn {
+.perfil__btn-1 {
+  background-color: #92dce5;
   border-radius: 0;
   color: white;
+  margin-right: 20px;
 }
-.perfil__botones .btn-1 {
-  background-color: #92dce5;
-}
-.perfil__botones .btn-2 {
+.perfil__btn-2 {
   background-color: #ef6461;
+  border-radius: 0;
+  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
