--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -1,27 +1,27 @@
-.navbar{
+.navigator{
     margin-left:5%;
     margin-right: 5%;
     @include respond-to($bp-sm){
         margin-top: 4%;
         margin-bottom: 4%;
     }
-    &__logo{
+    &__span-1{
         font-size: 35px;
         font-family: $primary-font;
         font-weight: $primary-font-bold;
-        span{
-            font-size: 10px;
-            position: absolute;
-            top:10%;
-        }
+    }
+    &__span-2{
+        font-size: 10px;
+        position: absolute;
+        top:6.85px;
+
+    }
+    &__burger{
+        color:$grey-logo;
+        font-size:25px;        
     }
 
-    &-toggler{
-        color:$grey-logo;
-        font-size:25px;
-        
-    }
+    &__link-1, &__link-2, &__link-3, &__link-4, &__link-5{
+        color: black;
+        }
 }
-.nav-link{
-    color: black;
-    }
