--- a/assets/scss/layout/_section.scss
+++ b/assets/scss/layout/_section.scss
@@ -7,11 +7,12 @@ border-bottom: 1px solid lightgray;
     &__container{
         padding-top: 0.625rem;
         margin-left:8.125rem;
-        @include respond-to($bp-sm){
-        margin-left: 10%;
-        margin-top: 3%;
-        }
-        &__img{
+            @include respond-to($bp-sm){
+            margin-left: 10%;
+            margin-top: 3%;
+            }
+    }
+    &__img{
         width:4.6875rem;
         border-radius: 50%;
         height: 4.6875rem;
@@ -20,22 +21,23 @@ border-bottom: 1px solid lightgray;
                 height:4.475rem;
                 margin-left: 0.625rem;
             }
-        }
     }
-    h4{
+    
+    &__h4{
         font-size: 21px;
         font-family: $secondary-font;
         font-weight: $secondary-font-bold;
         padding-left: 15px;
         padding-top: 20px;
         margin: 0;
-        p{
-            font-size: 15px;
-            color: gray;
-            padding-top: 3px;
-            font-family: $primary-font;
-            font-weight: $primary-font-regular;
-            
-        }
-     }
+    }
+    &__p{
+        font-size: 15px;
+        color: gray;
+        padding-top: 3px;
+        font-family: $primary-font;
+        font-weight: $primary-font-regular;
+        
+    }
+        
 }
