--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9924,6 +9924,11 @@ header {
     border-bottom: none;
   }
 }
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .perfil {
+    justify-content: center;
+  }
+}
 .perfil__container {
   padding-top: 0.625rem;
   margin-left: 8.125rem;
@@ -9932,6 +9937,11 @@ header {
   .perfil__container {
     margin-left: 10%;
     margin-top: 3%;
+  }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .perfil__container {
+    margin-left: 0;
   }
 }
 .perfil__img {
@@ -9977,27 +9987,30 @@ header {
     padding-left: 0;
   }
 }
-
-.card {
+.photos__card {
   border: none;
 }
-.card .card-img {
+.photos__img {
   border-radius: 0;
   align-content: center;
   height: 20vh;
 }
-.card .card-text {
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .photos__img {
+    height: 10vh;
+  }
+}
+.photos__text {
   font-size: 18px;
   font-weight: bold;
 }
-
-.row {
+.photos__row {
   padding-left: 10%;
   padding-right: 10%;
   row-gap: 20px;
 }
 @media (max-width: 576px) {
-  .row {
+  .photos__row {
     padding-left: 0;
     padding-right: 0;
   }
@@ -10011,6 +10024,12 @@ header {
   .navigator {
     margin-top: 4%;
     margin-bottom: 4%;
+  }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .navigator {
+    margin-top: 2%;
+    margin-bottom: 2%;
   }
 }
 .navigator__span-1 {
