--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -2,4 +2,10 @@
     @media (max-width:$break-point){
         @content
     }
+};
+
+@mixin respond-to-md($break-point){
+    @media (min-width:$break-point)and(max-width:991.98px){
+        @content
+    }
 }
