--- a/assets/scss/layout/_article.scss
+++ b/assets/scss/layout/_article.scss
@@ -10,28 +10,39 @@ margin-bottom: 50px;
            padding-left: 0;
             }
     }
-}
-
-.card{
-    border: none;
-    .card-img{
+    &__card{
+        border: none;
+    }
+    &__img{
         border-radius:0;
         align-content: center;
         height: 20vh;
-        }
-    .card-text{
+    @include respond-to-md($bp-md){
+        height: 10vh;
+    }    
+    }
+
+    &__text{
         font-size: 18px;
         font-weight: bold;
     }
-    }
+    &__row{
+        padding-left: 10%;
+        padding-right: 10%;
+        row-gap: 20px;
+        @include respond-to($bp-sm){
+            padding-left: 0;
+            padding-right: 0;
+             }
+     }
 
-.row{
-    padding-left: 10%;
-    padding-right: 10%;
-    row-gap: 20px;
-    @include respond-to($bp-sm){
-        padding-left: 0;
-        padding-right: 0;
-         }
- }
+
+
+}
+
+
+    
+    
+
+
 
